<resources>
    <string name="CHECKOUT_BASE_URL">http://checkout.klarna.sdk?%1$d</string>
    <string name="Country">Country</string>
    <string name="Country_asterisk">Country*</string>
    <string name="FULLSCREEN_BASE_URL">http://fullscreen.klarna.sdk?%1$d</string>
    <string name="SDK_PLATFORM">android</string>
    <string name="SDK_VERSION_NAME">1.6</string>
    <string name="a_and_b">%1$s and %2$s</string>
    <string name="a_confirmation_email_has_been_sent_to">A confirmation email has been sent to</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_settings">Account Settings</string>
    <string name="ad">Ad</string>
    <string name="ad_mob_app_id">ca-app-pub-9855323675892399~3140602666</string>
    <string name="add">Add</string>
    <string name="add_a_promo_code">Add a promo code</string>
    <string name="add_billing_address">Add Billing Address</string>
    <string name="add_cash">Add Cash</string>
    <string name="add_email">Add Email</string>
    <string name="add_from_saved_for_later">You have items saved for later, move them to your cart.</string>
    <string name="add_new_address">Add New Address</string>
    <string name="add_new_payment_method">Add New Payment Method</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_cart_modal_item_number">%1$d of %2$d</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="address_book">Address Book</string>
    <string name="address_changed">Address Changed</string>
    <string name="address_format_full">%1$s\10%2$s\10%3$s,%4$s\10%5$s\10%6$s</string>
    <string name="address_format_separator">,</string>
    <string name="address_format_short">%1$s %2$s, %3$s</string>
    <string name="address_has_been_added">Address has been added</string>
    <string name="address_has_been_deleted">Address has been deleted</string>
    <string name="address_has_been_upated">Address has been updated</string>
    <string name="address_line_1_asterisk">Address Line 1*</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="addresses_on_file">Addresses on File</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="albania">Albania</string>
    <string name="algeria">Algeria</string>
    <string name="all">All</string>
    <string name="all_count">All (%1$d)</string>
    <string name="all_notifications">All Notifications and Emails</string>
    <string name="all_results">All Results</string>
    <string name="all_set">All set!</string>
    <string name="allow_camera_and_storage_access">Please allow camera and storage access</string>
    <string name="almost_finished_title">Thanks! We\'re Almost Finished</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="american_samoa">American Samoa</string>
    <string name="an_item_in_your_wishlist_is_on_sale_today">Items in your wishlist are on sale today!</string>
    <string name="andorra">Andorra</string>
    <string name="android_pay">Android Pay</string>
    <string name="angola">Angola</string>
    <string name="anguilla">Anguilla</string>
    <string name="antarctica">Antarctica</string>
    <string name="antigua_barbuda">Antigua &amp; Barbuda</string>
    <string name="app">App</string>
    <string name="app_name">Wish</string>
    <string name="app_rate_enjoying_wish">Enjoying %1$s?</string>
    <string name="app_rate_feedback_hint">It would be really cool to see…</string>
    <string name="app_rate_no">Not really</string>
    <string name="app_rate_sorry_negative">Sorry to hear that.</string>
    <string name="app_rate_store_title">Rate Wish on the Play Store!</string>
    <string name="app_rate_submit">Submit</string>
    <string name="app_rate_thanks">Thanks for your feedback!</string>
    <string name="app_rate_what_to_improve">What would you like to see us improve on?</string>
    <string name="app_rate_yes">Yes! Rate us in the Play Store</string>
    <string name="app_type">wish</string>
    <string name="app_version">%1$s v%2$s</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_promo">Apply Promo</string>
    <string name="applying_rewards">Applying Rewards</string>
    <string name="applying_rewards_description">Rewards are automatically applied on your next purchase during their available dates</string>
    <string name="applying_rewards_title">Applying Rewards</string>
    <string name="approx_value">*Approx: %1$s</string>
    <string name="apt_suite_unit_optional">Apt/Suite/Unit (Optional)</string>
    <string name="are_you_really_sure">Are you really sure?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_deactivate_account">Do you really want to deactivate your account?</string>
    <string name="are_you_sure_delete_account">Do you really want to delete your account? This can\'t be undone!</string>
    <string name="are_you_sure_delete_account_confirm">You\'ll lose all information! We don\'t want to see you go :(</string>
    <string name="are_you_sure_delete_wishlist">Are you sure you want to delete this Wishlist?</string>
    <string name="are_you_sure_logout">Do you want to logout?</string>
    <string name="are_you_sure_no_personalize">This information will help us find products we know you\'ll love!</string>
    <string name="are_you_sure_remove_products">Are you sure you want to remove these items from this Wishlist?</string>
    <string name="are_you_sure_skip_update_profile">Updating your profile helps us find you items that you\'ll love!</string>
    <string name="are_you_sure_unfollow_user">Are you sure you want to stop following this user?</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you want to leave?</string>
    <string name="are_you_sure_you_want_to_skip">Are you sure you want to skip?</string>
    <string name="argentina">Argentina</string>
    <string name="armenia">Armenia</string>
    <string name="aruba">Aruba</string>
    <string name="asset_statements">[{ \"include\": \"https://www.wish.com/.well-known/assetlinks.json\" }]</string>
    <string name="asterisk_indicates_a_field_is_required">* Indicates a field is required</string>
    <string name="attachment">Attachment</string>
    <string name="australia">Australia</string>
    <string name="austria">Austria</string>
    <string name="authentication_error">There was a problem authenticating your account</string>
    <string name="available">Available</string>
    <string name="available_balance">Available Balance:</string>
    <string name="available_points">Available Points:</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="back_to_giveaway">Back to Giveaway</string>
    <string name="back_to_top">Back To Top</string>
    <string name="birthday">Birthday</string>
    <string name="boleto_emailed_to">Your Boleto was emailed to:</string>
    <string name="boleto_shipment_condition">Items do not ship until you pay your Boleto.</string>
    <string name="change_email_header_subtitle">You will need to confirm your new address in an email we send you.</string>
    <string name="change_email_header_title">Use this form to change your email address.</string>
    <string name="change_password_redesign_subtitle">Enter your old password for authorization.</string>
    <string name="change_password_redesign_title">Use this form to change your password.</string>
    <string name="choose_date">Choose Date</string>
    <string name="confirm_email_address">Confirm e-mail address</string>
    <string name="confirm_new_email_address">Confirm new e-mail address</string>
    <string name="confirmation_email_sent_to_colon">Confirmation email sent to:</string>
    <string name="current_email_address">Current e-mail address</string>
    <string name="enter_email_address">Enter e-mail address</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_valid_first_name">Please enter first name</string>
    <string name="enter_valid_last_name">Please enter last name</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="just_right">Just right</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="new_email_address">New e-mail address</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="onfido_close">Close</string>
    <string name="onfido_select_another_document">Select another document</string>
    <string name="onfido_unsupported_document_description">We don\'t support documents from all countries yet. Please select another document.</string>
    <string name="onfido_unsupported_document_title">Can\'t find your country?</string>
    <string name="order_confirmed_exclamation">Order Confirmed!</string>
    <string name="order_is_shipped_to_colon">Order is shipped to:</string>
    <string name="payment_confirmed">Payment Confirmed</string>
    <string name="payment_due_on_colon">Payment due on:</string>
    <string name="payment_processed_on">Payment processed on:</string>
    <string name="shaky_draw_brush">brush</string>
    <string name="shaky_draw_clear">clear</string>
    <string name="shaky_draw_save">save</string>
    <string name="shaky_draw_undo">undo</string>
    <string name="too_big">Too big</string>
    <string name="too_small">Too small</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="view_boleto_receipt">View Boleto Receipt</string>
    <string name="view_order_details">View Order Details</string>
</resources>