<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/change_password_redesign_header" android:background="@color/gray6" android:padding="@dimen/sixteen_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body_sp" android:textStyle="bold" android:textColor="@color/gray1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_password_redesign_title"/>
        <android.support.v4.widget.Space android:layout_width="wrap_content" android:layout_height="@dimen/two_padding"/>
        <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body_sp" android:textColor="@color/gray1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_password_redesign_subtitle"/>
    </LinearLayout>
    <include layout="@layout/default_border"/>
    <com.contextlogic.wish.ui.view.FormTextInputLayout android:id="@+id/change_password_redesign_old_password_fti_layout" android:nextFocusDown="@+id/change_password_redesign_new_password_fti_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sixteen_padding" android:layout_marginTop="@dimen/sixteen_padding" android:layout_marginRight="@dimen/sixteen_padding" android:hint="@string/enter_old_password" android:maxLines="1" android:inputType="textPassword" app:label="@string/old_password"/>
    <com.contextlogic.wish.ui.view.FormTextInputLayout android:id="@+id/change_password_redesign_new_password_fti_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sixteen_padding" android:layout_marginTop="@dimen/sixteen_padding" android:layout_marginRight="@dimen/sixteen_padding" android:hint="@string/enter_new_password" android:maxLines="1" android:inputType="textPassword" app:label="@string/new_password"/>
</LinearLayout>
