<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@color/gray6" android:padding="@dimen/twenty_four_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
        <FrameLayout android:layout_gravity="center" android:id="@+id/update_profile_redesign_image_container" android:background="@drawable/update_profile_redesign_image_selector" android:padding="@dimen/update_profile_redesign_image_border" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.contextlogic.wish.ui.image.NetworkImageView android:id="@+id/update_profile_redesign_image" android:layout_width="@dimen/update_profile_redesign_image_size" android:layout_height="@dimen/update_profile_redesign_image_size"/>
            <View android:layout_gravity="bottom|right|center_vertical|center_horizontal|center" android:background="@drawable/uploadphoto_24" android:layout_width="@dimen/twenty_four_padding" android:layout_height="@dimen/twenty_four_padding"/>
        </FrameLayout>
        <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_caption" android:layout_gravity="center" android:id="@+id/update_profile_redesign_image_caption" android:paddingTop="@dimen/eight_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upload_a_photo"/>
    </LinearLayout>
    <include layout="@layout/default_border"/>
    <com.contextlogic.wish.ui.view.FormTextInputLayout android:id="@+id/update_profile_redesign_form_input_first" android:nextFocusDown="@+id/update_profile_redesign_form_input_last" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sixteen_padding" android:layout_marginTop="@dimen/sixteen_padding" android:layout_marginRight="@dimen/sixteen_padding" android:hint="@string/enter_valid_first_name" android:maxLines="1" app:label="@string/first_name"/>
    <com.contextlogic.wish.ui.view.FormTextInputLayout android:id="@+id/update_profile_redesign_form_input_last" android:nextFocusDown="@+id/update_profile_redesign_form_input_birthday" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sixteen_padding" android:layout_marginTop="@dimen/sixteen_padding" android:layout_marginRight="@dimen/sixteen_padding" android:hint="@string/enter_valid_last_name" android:maxLines="1" app:label="@string/last_name"/>
    <com.contextlogic.wish.ui.view.FormTextInputLayout android:id="@+id/update_profile_redesign_form_input_birthday" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sixteen_padding" android:layout_marginTop="@dimen/sixteen_padding" android:layout_marginRight="@dimen/sixteen_padding" android:hint="@string/choose_date" android:maxLines="1" app:label="@string/birthday"/>
    <include android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/update_profile_gender_layout"/>
</LinearLayout>
