<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/change_email_header" android:background="@color/gray6" android:padding="@dimen/sixteen_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body_sp" android:textStyle="bold" android:textColor="@color/gray1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_email_header_title"/>
        <android.support.v4.widget.Space android:layout_width="wrap_content" android:layout_height="@dimen/two_padding"/>
        <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body_sp" android:textColor="@color/gray1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_email_header_subtitle"/>
    </LinearLayout>
    <include layout="@layout/default_border"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/change_email_current_email_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sixteen_padding" android:layout_marginTop="@dimen/sixteen_padding" android:layout_marginRight="@dimen/sixteen_padding">
        <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_form_title" android:textColor="@color/gray1" android:id="@+id/change_email_current_email_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/eight_padding" android:text="@string/current_email_address"/>
        <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body_sp" android:textColor="@color/gray1" android:id="@+id/change_email_current_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sixteen_padding"/>
        <View android:background="@color/gray6" android:layout_width="match_parent" android:layout_height="@dimen/divider"/>
    </LinearLayout>
    <com.contextlogic.wish.ui.view.FormTextInputLayout android:id="@+id/change_email_new_email_fti_layout" android:nextFocusDown="@+id/change_email_confirm_new_email_fti_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sixteen_padding" android:layout_marginTop="@dimen/sixteen_padding" android:layout_marginRight="@dimen/sixteen_padding" android:hint="@string/enter_email_address" android:maxLines="1" android:inputType="textEmailAddress" app:label="@string/new_email_address"/>
    <com.contextlogic.wish.ui.view.FormTextInputLayout android:id="@+id/change_email_confirm_new_email_fti_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sixteen_padding" android:layout_marginTop="@dimen/sixteen_padding" android:layout_marginRight="@dimen/sixteen_padding" android:hint="@string/confirm_new_email_address" android:maxLines="1" android:inputType="textEmailAddress" app:label="@string/confirm_email_address"/>
</LinearLayout>
