<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_title" android:textStyle="bold" android:textColor="@color/main_primary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/order_confirmed_exclamation"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textStyle="bold" android:textColor="@color/text_primary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/boleto_emailed_to"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textColor="@color/text_primary" android:id="@+id/boleto_order_confirmed_box_view_email" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textColor="@color/text_primary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/eight_padding" android:text="@string/boleto_shipment_condition"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textColor="@color/text_primary" android:id="@+id/boleto_print_and_pay_before_due_date_text" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <com.contextlogic.wish.ui.button.ThemedButton android:textSize="@dimen/text_size_body" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/boleto_order_confirmed_box_view_boleto_button" android:background="@drawable/primary_button_selector" android:layout_width="match_parent" android:layout_height="@dimen/boleto_order_confirmed_box_view_boleto_button_height" android:layout_marginTop="@dimen/sixteen_padding" android:text="@string/view_boleto_receipt" android:textAllCaps="false"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textColor="@color/main_primary" android:gravity="center" android:id="@+id/boleto_order_confirmed_box_order_details_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/eight_padding" android:text="@string/view_order_details"/>
</merge>
