<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/onfido_fs_normal" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/onfido_activity_horizontal_margin" android:layout_marginTop="20dp" android:layout_marginRight="@dimen/onfido_activity_horizontal_margin" android:text="@string/onfido_unsupported_document_title" style="@style/OnfidoTextStyle.Secondary"/>
    <TextView android:textSize="@dimen/onfido_fs_normal" android:id="@+id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/onfido_activity_horizontal_margin" android:layout_marginTop="20dp" android:layout_marginRight="@dimen/onfido_activity_horizontal_margin" android:layout_marginBottom="24dp" android:text="@string/onfido_unsupported_document_description" android:layout_below="@+id/title" style="@style/OnfidoTextStyle"/>
    <Button android:id="@+id/alternativeDocument" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/onfido_select_another_document" android:layout_below="@+id/description" android:layout_alignParentRight="true" style="@style/OnfidoAlertDialogButton"/>
    <Button android:id="@+id/dismiss" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/onfido_close" android:layout_below="@+id/alternativeDocument" android:layout_alignParentRight="true" style="@style/OnfidoAlertDialogButton"/>
</RelativeLayout>
