<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_title" android:textStyle="bold" android:textColor="@color/main_primary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/order_confirmed_exclamation"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textStyle="bold" android:textColor="@color/cool_gray1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/order_confirmed_box_view_text_margin" android:text="@string/confirmation_email_sent_to_colon"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textColor="@color/cool_gray1" android:id="@+id/order_confirmed_box_view_email" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textStyle="bold" android:textColor="@color/cool_gray1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/order_confirmed_box_view_text_margin" android:text="@string/order_is_shipped_to_colon"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textColor="@color/cool_gray1" android:id="@+id/order_confirmed_box_view_shipping_info_content" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textStyle="bold" android:textColor="@color/cool_gray1" android:id="@+id/order_confirmed_box_view_commerce_loan_payment_due_on" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/eight_padding" android:text="@string/payment_due_on_colon"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textColor="@color/cool_gray1" android:id="@+id/order_confirmed_box_view_commerce_loan_payment_due_date" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_body" android:textStyle="bold" android:textColor="@color/main_primary" android:id="@+id/order_confirmed_box_order_details_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sixteen_padding" android:text="@string/view_order_details"/>
</merge>
