<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.contextlogic.wish.ui.text.ThemedTextView android:textSize="@dimen/text_size_form_title" android:textColor="@color/text_primary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sixteen_padding" android:layout_marginTop="@dimen/sixteen_padding" android:layout_marginRight="@dimen/sixteen_padding" android:layout_marginBottom="@dimen/eight_padding" android:text="@string/gender"/>
    <RadioGroup android:orientation="horizontal" android:id="@+id/update_profile_redesign_gender_radio_group" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sixteen_padding" android:layout_marginRight="@dimen/sixteen_padding">
        <RadioButton android:id="@+id/update_profile_redesign_radio_button_male" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/male"/>
        <RadioButton android:id="@+id/update_profile_redesign_radio_button_female" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/female"/>
    </RadioGroup>
</merge>
