<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:orientation="horizontal" android:id="@+id/size_selector_radio_group" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.contextlogic.wish.ui.button.ThemedButton android:textColor="@drawable/product_review_size_selector_text_color" android:gravity="center" android:id="@+id/size_too_small" android:background="@drawable/product_review_size_selector_button" android:layout_width="@dimen/product_review_size_selector_button_width" android:layout_height="@dimen/product_review_size_selector_button_height" android:text="@string/too_small" android:textAllCaps="false"/>
    <com.contextlogic.wish.ui.button.ThemedButton android:textColor="@drawable/product_review_size_selector_text_color" android:gravity="center" android:id="@+id/size_just_right" android:background="@drawable/product_review_size_selector_button" android:layout_width="@dimen/product_review_size_selector_button_width" android:layout_height="@dimen/product_review_size_selector_button_height" android:layout_marginLeft="@dimen/eight_padding" android:text="@string/just_right" android:textAllCaps="false"/>
    <com.contextlogic.wish.ui.button.ThemedButton android:textColor="@drawable/product_review_size_selector_text_color" android:gravity="center" android:id="@+id/size_too_large" android:background="@drawable/product_review_size_selector_button" android:layout_width="@dimen/product_review_size_selector_button_width" android:layout_height="@dimen/product_review_size_selector_button_height" android:layout_marginLeft="@dimen/eight_padding" android:text="@string/too_big" android:textAllCaps="false"/>
</LinearLayout>
